--- a/HW1 - Problem 2 (Test Code).ipynb
+++ b/HW1 - Problem 2 (Test Code).ipynb
@@ -17,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "b = 3"
+    "c = 5"
    ]
   },
   {
@@ -35,7 +35,7 @@
     }
    ],
    "source": [
-    "print(a*b)"
+    "print(a*c)"
    ]
   },
   {
