Update HW1 - Problem 2 (Test Code).ipynb

--- a/HW1 - Problem 2 (Test Code).ipynb
+++ b/HW1 - Problem 2 (Test Code).ipynb
@@ -18,7 +18,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "c = 2319"
+    "c = 2"
     
    ]
   },
@@ -37,7 +37,7 @@
     }
    ],
    "source": [
-    "print(a/c)"
+    "print(a*c)"
    ]
   },
   {
