Update HW1 - Problem 2 (Test Code).ipynb

--- a/HW1 - Problem 2 (Test Code).ipynb
+++ b/HW1 - Problem 2 (Test Code).ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "a = 5"
+    "a = 3"
     
    ]
   },
@@ -37,7 +37,7 @@
     }
    ],
    "source": [
-    "y=a*c"
+    "print(a*c)"
    ]
   },
   {
