--- a/Lab3.2.ipynb
+++ b/Lab3.2.ipynb
@@ -3,6 +3,16 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "cf155d17",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#dennis set up file on git hub and downloaded tool kits"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "id": "7fec93c1",
    "metadata": {},
    "outputs": [],
