--- a/Lab3.2.ipynb
+++ b/Lab3.2.ipynb
@@ -183,6 +183,9 @@
     }
    ],
    "source": [
+    "#Jake loaded the class labels and showd the image in matplotlib. I also applied the layer outputs for the detections, \n",
+    "#while updating the proper color channels and non-maxima suppression\n",
+    "\n",
     "# load the COCO class labels:\n",
     "class_names = open(\"coco.names\").read().strip().split(\"\\n\")\n",
     "\n",
@@ -569,6 +572,7 @@
     }
    ],
    "source": [
+    "\n",
     "while(cap.isOpened()):\n",
     "    ret, frame = cap.read()\n",
     "    frame = process(frame)\n",
