--- a/Object Detection Code for Final Project (Ref. L3 P2).ipynb
+++ b/Object Detection Code for Final Project (Ref. L3 P2).ipynb
@@ -343,7 +343,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Billy and Mitch trimmed the video files and had them processed with YOLO"
+    "# Billy and Mitch trimmed the video files which was then processed with YOLO"
    ]
   },
   {
