--- a/Object Detection Code for Final Project (Ref. L3 P2).ipynb
+++ b/Object Detection Code for Final Project (Ref. L3 P2).ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#dennis set up file on git hub and downloaded tool kits"
+    "#dennis set up file on git hub and downloaded tool kits."
    ]
   },
   {
