--- a/Object Detection Code for Final Project (Ref. L3 P2).ipynb
+++ b/Object Detection Code for Final Project (Ref. L3 P2).ipynb
@@ -186,6 +186,8 @@
     "#Jake loaded the class labels and showd the image in matplotlib. I also applied the layer outputs for the detections, \n",
     "#while updating the proper color channels and non-maxima suppression\n",
     "\n",
+    "# Mitch worked to develoup the \"process\" of which was used to apply object detection to the frames of our videos.\n",
+    "\n",
     "# load the COCO class labels:\n",
     "class_names = open(\"coco.names\").read().strip().split(\"\\n\")\n",
     "\n",
@@ -1442,14 +1444,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "id": "0dea88cb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'cv2' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-5b6ac3225530>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mcapx\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcv2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mVideoCapture\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Lab3Video4_Trim.mp4'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mwriter\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcv2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mVideoWriter\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Top_Of_Ramp.avi'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcv2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mVideoWriter_fourcc\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m*\u001b[0m\u001b[1;34m'MJPG'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m20\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mwidth\u001b[0m\u001b[1;33m/\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mheight\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'cv2' is not defined"
+     ]
+    }
+   ],
    "source": [
     "capx = cv2.VideoCapture('Lab3Video4_Trim.mp4')\n",
     "\n",
-    "writer = cv2.VideoWriter('Top_Of_Ramp.avi', cv2.VideoWriter_fourcc(*'MJPG'), 20, (int(width/2),height))"
+    "writer = cv2.VideoWriter('Top_Of_Ramp.avi', cv2.VideoWriter_fourcc(*'MJPG'), 20, (int(width/2),height))\n",
+    "\n",
+    "#mitch worked on getting the videos imported and saved as differened cap\"x\" to refrence"
    ]
   },
   {
